company name has edited

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="top-info text-center text-md-left">
               <li>
                 <i class="fas fa-map-marker-alt"></i>
-                <p class="info-text">ShadeAndBlides Incorporate, USA</p>
+                <p class="info-text">ShadesAndBlindsme Incorporate, USA</p>
               </li>
             </ul>
           </div>
@@ -75,7 +75,7 @@
                     mb-3 mb-md-5 mb-lg-0
                   ">
                 <a class="d-block logoText" href="index.html">
-                  <img loading="lazy" src="images/logo.jpeg" alt="ShadeAndBlides" />
+                  <img loading="lazy" src="images/logo.jpeg" alt="ShadesAndBlindsme" />
                   Shades & Blinds
                 </a>
               </div>
@@ -98,7 +98,7 @@
                       <div class="info-box-content">
                         <p class="info-box-title">Email Us</p>
                         <p class="info-box-subtitle">
-                          <a href="mailto:office@ShadeAndBlides.com">office@ShadeAndBlides.com</a>
+                          <a href="mailto:office@ShadesAndBlindsme.com">office@ShadesAndBlindsme.com</a>
                         </p>
                       </div>
                     </div>
