index.htl file has updated

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="top-info text-center text-md-left">
               <li>
                 <i class="fas fa-map-marker-alt"></i>
-                <p class="info-text">ShadesAndBlindsme Incorporate, USA</p>
+                <p class="info-text">ShadesAndBlindsme Incorporate, UAE</p>
               </li>
             </ul>
           </div>
@@ -75,7 +75,7 @@
                     mb-3 mb-md-5 mb-lg-0
                   ">
                 <a class="d-block logoText" href="index.html">
-                  <img loading="lazy" src="images/logo.jpeg" alt="ShadesAndBlindsme" />
+                  <img loading="lazy" src="images/logo.jpeg" alt="ShadeAndBlides" />
                   Shades & Blinds
                 </a>
               </div>
@@ -181,8 +181,8 @@
         </div>
       </div>
       <div class="video-icon">
-        <a class="popup-video btn-icon" href="video/video.mp4" target="_blank"
-          data-animation="bounceIn" data-delay=".4s"><i class="fas fa-play"></i></a>
+        <a class="popup-video btn-icon" href="video/video.mp4" target="_blank" data-animation="bounceIn"
+          data-delay=".4s"><i class="fas fa-play"></i></a>
       </div>
     </div>
 
@@ -292,9 +292,8 @@
           <div class="col-lg-6 mt-4 mt-lg-0">
             <h3 class="into-sub-title">Our Values</h3>
             <p>
-              Minim Austin 3 wolf moon scenester aesthetic, umami odio
-              pariatur bitters. Pop-up occaecat taxidermy street art, tattooed
-              beard literally.
+              Our commitment to contribute to the development of society and the welfare of mankind through our business
+              performance is well stated in our vision and mission.
             </p>
 
             <div class="accordion accordion-group" id="our-values-accordion">
@@ -303,7 +302,7 @@
                   <h2 class="mb-0">
                     <button class="btn btn-block text-left" type="button" data-toggle="collapse"
                       data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Safety
+                      Mission
                     </button>
                   </h2>
                 </div>
@@ -311,7 +310,9 @@
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                   data-parent="#our-values-accordion">
                   <div class="card-body">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    We are committed to empowering our team to provide premium quality window covering treatment and
+                    outdoor shade solutions to our customers in the UAE & other MEA region and deliver value to
+                    stakeholders.
                   </div>
                 </div>
               </div>
@@ -320,13 +321,14 @@
                   <h2 class="mb-0">
                     <button class="btn btn-block text-left collapsed" type="button" data-toggle="collapse"
                       data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Customer Service
+                      Vision
                     </button>
                   </h2>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#our-values-accordion">
                   <div class="card-body">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    We significantly aim to become one of the top ten leading multinational organizations in Shades and
+                    blinds industry by leveraging our expertise in MEA region
                   </div>
                 </div>
               </div>
@@ -775,7 +777,7 @@
         <div class="row">
           <div class="col-md-12">
             <h3 class="column-title">We love to hear</h3>
-            <form id="contact-form"  role="form">
+            <form id="contact-form" role="form">
               <div class="error-container"></div>
               <div class="row">
                 <div class="col-md-4">
@@ -929,8 +931,9 @@
     <!-- shuffle -->
     <script src="plugins/shuffle/shuffle.min.js" defer></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- Template custom -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
+      integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
   </div>
   <!-- Body inner end -->
