some changes has updated

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>ShadesAndBlindsme</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="description" content="Construction Html5 Template" />
+  <meta name="description" content="<meta name="description" content="shadesandblindsme is one of the leading manufacturers and suppliers of premier quality blinds, internal and external shades, curtains in uae">" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
   <link rel="icon" type="image/png" href="images/favicon.jpeg" />
   <!-- Bootstrap -->
