--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
   <!-- Template styles-->
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/popup.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213156373-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-213156373-1');
+  </script>
+
 </head>
 
 <body>
