email id has changed

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                       <div class="info-box-content">
                         <p class="info-box-title">Email Us</p>
                         <p class="info-box-subtitle">
-                          <a href="mailto:office@ShadesAndBlindsme.com">office@ShadesAndBlindsme.com</a>
+                          <a href="mailto:info@shadesandblindsme.com">info@shadesandblindsme.com</a>
                         </p>
                       </div>
                     </div>
@@ -116,11 +116,6 @@
                   <li class="header-get-a-quote">
                     <a class="btn btn-primary" href="#main-container">Get a Quote</a>
                   </li>
-                  <!-- <li class="header-get-a-quote">
-                      <a class="btn btn-primary" href="#"
-                        >Free Sample</a
-                      >
-                    </li> -->
                 </ul>
                 <!-- Ul end -->
               </div>
