contact form, meta details has updated

--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>ShadesAndBlindsme</title>
+  <title>Blinds, Curtains & Shades Dubai | Shades & Blinds </title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="description" content="shadesandblindsme is one of the leading manufacturers and suppliers of premier quality blinds, internal and external shades, curtains in uae" />
+  <meta name="description" content="Shades & Blinds is one of the leading manufacturers and suppliers of premier quality blinds, internal and external shades, curtains in dubai" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
+  <meta name="robots" content="max-image-preview:large">
+  <meta name="robots" content="index,follow">
+  <link rel="canonical" href="https://shadesandblindsme.com/">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Blinds, Curtains &amp; Shades Dubai | Shades & Blinds ">
+  <meta property="og:description" content="Shades & Blinds is one of the leading manufacturers and suppliers of premier quality blinds, internal and external shades, curtains in Dubai  ">
+  <meta property="og:url" content="https://shadesandblindsme.com/">
+  <meta property="og:site_name" content="Shades & Blinds">
   <link rel="icon" type="image/png" href="images/favicon.jpeg" />
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css" />
   <!-- FontAwesome -->
@@ -43,7 +53,7 @@
             <ul class="top-info text-center text-md-left">
               <li>
                 <i class="fas fa-map-marker-alt"></i>
-                <p class="info-text">ShadesAndBlindsme Incorporate, UAE</p>
+                <p class="info-text">Shades & Blinds Incorporate, UAE</p>
               </li>
             </ul>
           </div>
@@ -77,21 +87,24 @@
       <div class="bg-white">
         <div class="container">
           <div class="logo-area">
-            <div class="row align-items-center">
+            <div class="row ">
               <div class="
                     logo
-                    col-lg-3
+                    col-lg-6
                     text-center text-lg-left
-                    mb-3 mb-md-5 mb-lg-0
+                    mb-3  mb-lg-0
                   ">
                 <a class="d-block logoText" href="index.html">
-                  <img loading="lazy" src="images/logo.jpeg" alt="ShadeAndBlides" />
-                  Shades & Blinds
+                  <div class="logoDiv">
+                    Shades & Blinds
+                  <img loading="lazy" src="images/logo.jpeg"  alt="ShadeAndBlides" />
+                  الستائر والستائر
+                  </div>
                 </a>
               </div>
               <!-- logo end -->
 
-              <div class="col-lg-9 header-right">
+              <div class="col-lg-6 header-right">
                 <ul class="top-info-box">
                   <li>
                     <div class="info-box">
@@ -112,9 +125,6 @@
                         </p>
                       </div>
                     </div>
-                  </li>
-                  <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="#main-container">Get a Quote</a>
                   </li>
                 </ul>
                 <!-- Ul end -->
@@ -722,14 +732,6 @@
             </div>
             <!-- shuffle end -->
           </div>
-
-          <!-- <div class="col-12">
-              <div class="general-btn text-center">
-                <a class="btn btn-primary" href="projects.html"
-                  >View All Projects</a
-                >
-              </div>
-            </div> -->
         </div>
         <!-- Content row end -->
       </div>
@@ -782,27 +784,20 @@
         <div class="row">
           <div class="col-md-12">
             <h3 class="column-title">We love to hear</h3>
-            <form id="contact-form" role="form">
+            <form id="contact-form" role="form" action="https://formsubmit.co/846cf38186b72dfa7d5e4811fc8b7312" method="post">
               <div class="error-container"></div>
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <div class="form-group">
                     <label>Name</label>
                     <input class="form-control form-control-name" name="name" id="name" placeholder="" type="text"
                       required>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <div class="form-group">
                     <label>Email</label>
                     <input class="form-control form-control-email" name="email" id="email" placeholder="" type="email"
-                      required>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label>Subject</label>
-                    <input class="form-control form-control-subject" name="subject" id="subject" placeholder=""
                       required>
                   </div>
                 </div>
@@ -815,6 +810,7 @@
               <div class="text-right"><br>
                 <button class="btn btn-primary solid blank" type="submit">Send Message</button>
               </div>
+              <input type="hidden" name="_subject" value="New Enquiry">
             </form>
           </div>
 
