dubai mall image has removed

--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
             <div class="ts-intro">
               <h3 class="into-sub-title">We deliver landmark projects</h3>
               <p>
-                Shades & Blinds is new age construction and interior design business launched by 25 years of experienced engineers & designers.
+                Shades & Blinds is new age blinds,curtains and shades design business launched by 25 years of experienced engineers & designers.
 Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
 
               </p>
@@ -473,7 +473,7 @@ Employing Lean Construction practices on our projects to create a better environ
               <h3 class="widget-title">About Us</h3>
 
               <p>
-                Shades & Blinds is new age construction and interior design business launched by 25 years of experienced engineers & designers.
+                Shades & Blinds is new age blinds,curtains and shades design business launched by 25 years of experienced engineers & designers.
 Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
 
 
