--- a/internalshades.html
+++ b/internalshades.html
@@ -455,8 +455,8 @@
               <h3 class="widget-title">About Us</h3>
 
               <p>
-                Shades & Blinds is new age construction and interior design business launched by 25 years of experienced engineers & designers.
-                Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
+                Shades & Blinds is new age blinds,curtains and shades design business launched by 25 years of experienced engineers & designers.
+Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
               </p>
               <div class="footer-social">
                 <ul>
