--- a/externalshades.html
+++ b/externalshades.html
@@ -236,23 +236,7 @@
                         <div class="row shuffle-wrapper">
                             <div class="col-1 shuffle-sizer"></div>
 
-                            <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["retractable"]'>
-                                <div class="project-img-container">
-                                    <a class="gallery-popup" href="images/projects/external/1.jpg"
-                                        aria-label="project-img">
-                                        <img class="img-fluid gallery-image" src="images/projects/external/1.jpg"
-                                            alt="project-img" />
-                                        <span class="gallery-icon"><i class="fa fa-plus"></i></span>
-                                    </a>
-
-                                    <div class="project-item-info">
-                                        <div class="project-item-info-content">
-
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
+                            
 
                             <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["retractable"]'>
                                 <div class="project-img-container">
@@ -440,7 +424,7 @@
                             <h3 class="widget-title">About Us</h3>
 
                             <p>
-                                Shades & Blinds is new age construction and interior design business launched by 25 years of experienced engineers & designers.
+                                Shades & Blinds is new age blinds,curtains and shades design business launched by 25 years of experienced engineers & designers.
 Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
 
                             </p>
