some images has removed from gallery

--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html#about">Aboutus</a>
+                      <a class="nav-link" href="about.html#about">About us</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="index.html#products">Products</a>
@@ -201,7 +201,7 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="ts-intro">
-              <h3 class="into-sub-title">We deliver landmark projects</h3>
+              <h3 class="into-sub-title">About Us</h3>
               <p>
                 Shades & Blinds is new age blinds,curtains and shades design business launched by 25 years of experienced engineers & designers.
 Employing Lean Construction practices on our projects to create a better environment for our employees and partners.
