--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link" href="about.html#about">Aboutus</a>
+                      <a class="nav-link" href="about.html#about">About us</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#products">Products</a>
@@ -517,7 +517,7 @@
             <div class="row shuffle-wrapper">
               <div class="col-1 shuffle-sizer"></div>
 
-              <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
+              <!-- <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
                   <a class="gallery-popup" href="images/projects/gallery_1.jpg" aria-label="project-img">
                     <img class="img-fluid gallery-image" src="images/projects/gallery_1.jpg" alt="project-img" />
@@ -561,7 +561,7 @@
                   </div>
                 </div>
 
-              </div>
+              </div> -->
               <div class="col-lg-4 col-sm-6 shuffle-item" data-groups='["roller-blinds"]'>
                 <div class="project-img-container">
                   <a class="gallery-popup" href="images/projects/gallery_4.jpg" aria-label="project-img">
